--- a/app/views/add_cate/edit_site.html.erb
+++ b/app/views/add_cate/edit_site.html.erb
@@ -4,6 +4,7 @@
 <h1> Ajouter une estimation</h1>
   <p><input type="hidden" name="id" value="<%= @site.id %>"></p>
   <p><input type="string" name="title" placeholder="title" value="<%= @site.title%>"/></br></p>
+  <p><input type="string" name="link" placeholder="link" value="<%= @site.link%>"/></br></p>
   <p><input type="string" name="image" placeholder="image" value="<%= @site.image%>"/></br></p>
   <p><input type="integer" name="min_price" placeholder="min_price" value="<%= @site.min_price%>"/></br></p>
   <p><input type="integer" name="max_price" placeholder="max_price" value="<%= @site.max_price%>"/></br></p>
